Add angular material

--- a/src/app/auth/components/footer/footer.component.html
+++ b/src/app/auth/components/footer/footer.component.html
@@ -1,3 +1,15 @@
-<p>
-  footer works!
-</p>
+<div class="footer">
+    <div>
+      <a mat-button routerLink=".">Home</a>
+    </div>
+    <div>
+      <a mat-button routerLink=".">About</a>
+    </div>
+    <div>
+      <a mat-button routerLink=".">Licenses</a>
+    </div>
+    <div style="flex:auto;"></div>
+    <div>
+      <!-- &copy; {{ year }} {{ copyright | uppercase }} -->
+    </div>
+  </div>
