--- a/src/app/auth/components/header/header.component.html
+++ b/src/app/auth/components/header/header.component.html
@@ -1,3 +1,6 @@
-<p>
-  header works!
-</p>
+<!-- <div style="width: 85vw;display:flex;flex-flow:row nowrap;justify-content: space-between;background:transparent;color:white">
+    <div>
+        <img style="height:45px;padding-top:20px;" src="../../../../assets/images/logo/logo_MTK.png">
+       
+    </div>
+</div> -->
