--- a/src/app/auth/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/auth/layouts/auth-layout/auth-layout.component.html
@@ -1,5 +1,15 @@
 <div class="auth-layout-container">
-  <div class="signin-container">
-xxxxxxx
-  </div>  
+  <div class="auth-layout-content">
+
+    <div class="auth-layout-header">
+      <app-auth-header></app-auth-header>
+    </div>
+    <div class="auth-layout-main">
+        <router-outlet></router-outlet>
+    </div> 
+    <div class="auth-layout-footer">
+      <app-auth-footer></app-auth-footer>
+    </div>
+
+  </div> 
 </div>
