--- a/src/app/auth/layouts/auth-layout/auth-layout.component.scss
+++ b/src/app/auth/layouts/auth-layout/auth-layout.component.scss
@@ -1,51 +1,53 @@
 .auth-layout-container{
-   
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100%;
+
+    width: 100vw;
+    height: 100vh;
+    top:0px;
     background-color:#f2f2f2;
     //background-color:rgb(0, 114, 198);
+
     background-image: url(../../../../assets/images/backgrounds/auth_bg_2.jpg);
     
     background-repeat: no-repeat,no-repeat;
     background-position: center center,center center;
     background-size: cover,cover;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  
 }
 
 .auth-layout-container:before {
 
     content: "";
+    
     position: fixed;
-    //z-index: 1;
-    top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 
     //background: rgba(0, 0, 0, 0.5);
-    background: rgba(0, 0, 0, 0.55);
+    background-color: rgba(0, 0, 0, 0.55);
        
 }
 
-.signin-container {
+.auth-layout-content {
     
-    margin-left: auto;
-    margin-right: auto;
     position: relative;
-    max-width: 440px;
-    width: calc(100% - 40px);
-    padding: 44px;
-    margin-bottom: 28px;
-    background-color: #fff;
-    -webkit-box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    min-width: 320px;
-    min-height: 338px;
-    overflow: hidden;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
 
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content:space-between;
+    align-items: stretch;
+   
 }
+
+.auth-layout-header {
+    
+    align-self:center;
+}
+
+.auth-layout-main {
+
+    align-self:center;
+}
+
