--- a/src/app/scss/bootstrap-custom/bootstrap-custom.scss
+++ b/src/app/scss/bootstrap-custom/bootstrap-custom.scss
@@ -1,14 +1,14 @@
 // custom
-//@import "bootstrap-custom.variables";
+@import "bootstrap-custom.variables";
 
 // Required
-//@import "~bootstrap/scss/functions";
-//@import "~bootstrap/scss/variables";
-//@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
 
 // Optional
-//@import "~bootstrap/scss/root";
-//@import "~bootstrap/scss/reboot";
+@import "~bootstrap/scss/root";
+@import "~bootstrap/scss/reboot";
 
 
 // @import "bootstrap/scss/type";
