--- a/src/app/scss/venus.scss
+++ b/src/app/scss/venus.scss
@@ -1,6 +1,6 @@
 
-//@import "bootstrap-custom/bootstrap-custom.scss";
+@import "bootstrap-custom/bootstrap-custom.scss";
 
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import "material-custom/material-custom.scss";
 
 @import 'common/common.scss';
