--- a/src/app/auth/layouts/auth-layout/auth-layout.component.scss
+++ b/src/app/auth/layouts/auth-layout/auth-layout.component.scss
@@ -3,11 +3,16 @@
     width: 100vw;
     height: 100vh;
     top:0px;
-    background-color:#f2f2f2;
+        
     //background-color:rgb(0, 114, 198);
 
-    background-image: url(../../../../assets/images/backgrounds/auth_bg_2.jpg);
+    //background-color: rgb(0, 128, 157);
+    //background-image: url(../../../../assets/images/backgrounds/auth_bg_1.jpg);
     
+    background-color:#f2f2f2;
+    //background-image: url(../../../../assets/images/backgrounds/auth_bg_2.jpg);
+    background-image: url(../../../../assets/images/backgrounds/auth_bg_3.jpg);
+
     background-repeat: no-repeat,no-repeat;
     background-position: center center,center center;
     background-size: cover,cover;
