--- a/src/app/auth/components/footer/footer.component.html
+++ b/src/app/auth/components/footer/footer.component.html
@@ -1,16 +1,13 @@
- <div class="footer">
-    <div>
-        <button mat-button>Basic</button>
-      <a mat-button routerLink=".">Home</a>
+ <div class="d-flex flex-row justify-content-end align-items-baseline mr-3 text-white">
+    <div class="ve-font-sm mx-2" style="line-height: 28px;" >
+        <!--  &copy; {{ year }} {{ copyright | uppercase }} -->
+        &copy; 2019 Venus
     </div>
-    <div>
-      <a mat-button routerLink=".">About</a>
+    <div class="mx-2" style="line-height: 28px;">
+      <a routerLink="." class="ve-font-sm text-white">Help</a>
     </div>
-    <div>
-      <a mat-button routerLink=".">Licenses</a>
+    <div class="mx-2" style="line-height: 28px;">
+      <a routerLink="." class="ve-font-sm text-white">License</a>
     </div>
-    <div style="flex:auto;"></div>
-    <div>
-      <!--  &copy; {{ year }} {{ copyright | uppercase }} -->
-    </div>
+   
   </div>
