--- a/src/app/auth/pages/signin-page/signin-page.component.html
+++ b/src/app/auth/pages/signin-page/signin-page.component.html
@@ -1,5 +1,3 @@
-<div class="signin-container">
-    <div> <img style="height:45px;" src="../../../../assets/images/logo/logo_4.svg"></div>
-    <div class="ve-heading-3xl">Venus</div>
-    <app-auth-signin></app-auth-signin>
-</div>
+
+<div class="ve-heading-3xl my-2">登录</div>
+<app-auth-signin></app-auth-signin>
