--- a/src/app/auth/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/auth/layouts/auth-layout/auth-layout.component.html
@@ -1,15 +1,21 @@
 <div class="auth-layout-container">
-  <div class="auth-layout-content">
-
-    <div class="auth-layout-header">
+  <div class="auth-layout-main position-relative d-flex flex-column justify-content-between align-items-stretch">
+    <div>
       <app-auth-header></app-auth-header>
     </div>
-    <div class="auth-layout-main">
+    <div class="auth-layout-content align-self-center">
+      <div class="auth-layout-background-logo">
+        <img class="d-block mx-auto" src="../../../../assets/images/logo/logo_microsoft_bing.png">
+      </div>
+      <div class="auth-layout-page-container">
+        <div><img src="../../../../assets/images/logo/logo_microsoft.png"></div>
         <router-outlet></router-outlet>
-    </div> 
+      </div>
+   </div>
+ 
     <div class="auth-layout-footer">
       <app-auth-footer></app-auth-footer>
     </div>
-
   </div> 
 </div>
+
