--- a/src/app/auth/components/footer/footer.component.html
+++ b/src/app/auth/components/footer/footer.component.html
@@ -1,7 +1,7 @@
  <div class="d-flex flex-row justify-content-end align-items-baseline mr-3 text-white">
     <div class="ve-font-sm mx-2" style="line-height: 28px;" >
         <!--  &copy; {{ year }} {{ copyright | uppercase }} -->
-        &copy; 2019 Venus
+        &copy; 2019 TuringCSTC
     </div>
     <div class="mx-2" style="line-height: 28px;">
       <a routerLink="." class="ve-font-sm text-white">Help</a>
