--- a/src/app/auth/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/auth/layouts/auth-layout/auth-layout.component.html
@@ -5,10 +5,10 @@
     </div>
     <div class="auth-layout-content align-self-center">
       <div class="auth-layout-background-logo">
-        <img class="d-block mx-auto" src="../../../../assets/images/logo/logo_microsoft_bing.png">
+        <img class="d-block mx-auto" src="../../../../assets/images/logo/logo_venus.png">
       </div>
       <div class="auth-layout-page-container">
-        <div><img src="../../../../assets/images/logo/logo_microsoft.png"></div>
+        <div><img height="23" src="../../../../assets/images/logo/logo_turingcstc.png"></div>
         <router-outlet></router-outlet>
       </div>
    </div>
